--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -17,6 +17,14 @@
   height: 100%;
 }
 
+.navbar {
+  background: transparent;
+}
+
+.scrolledNavbar {
+  background: rgb(255 255 255 / 75%);
+}
+
 @-webkit-keyframes gradient-animation {
   0% {
     background-position: 0% 7%;
