--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,20 @@
   --foreground-rgb: 0, 0, 0;
 }
 
+*::-webkit-scrollbar {
+  width: 0.8em;
+}
+
+*::-webkit-scrollbar-track {
+  background: theme("colors.french-gray");
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: theme("colors.main-blue");
+  border-radius: 14px;
+  border: 3px solid theme("colors.french-gray");
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
