--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -1,25 +1,3 @@
-.backgroundGradient {
-  --gradient-duration: 35s;
-
-  background: linear-gradient(
-    136deg,
-    theme("colors.main-blue"),
-    theme("colors.powder-blue"),
-    theme("colors.french-gray"),
-    theme("colors.bone"),
-    theme("colors.timberwolf")
-  );
-  background-size: 1200% 1200%;
-  -webkit-animation: gradient-animation var(--gradient-duration) ease infinite;
-  -moz-animation: gradient-animation var(--gradient-duration) ease infinite;
-  -o-animation: gradient-animation var(--gradient-duration) ease infinite;
-  animation: gradient-animation var(--gradient-duration) ease infinite;
-  height: 100vh;
-  width: 100%;
-  position: absolute;
-  z-index: -2;
-}
-
 .navbar {
   background: transparent;
 }
@@ -28,44 +6,41 @@
   background: rgb(255 255 255 / 75%);
 }
 
-@-webkit-keyframes gradient-animation {
-  0% {
-    background-position: 0% 7%;
-  }
-
-  50% {
-    background-position: 100% 94%;
-  }
-
-  100% {
-    background-position: 0% 7%;
-  }
+.subtitleTextSpan {
+  animation: slide 12s linear infinite;
 }
 
-@-o-keyframes gradient-animation {
-  0% {
-    background-position: 0% 7%;
-  }
-
-  50% {
-    background-position: 100% 94%;
-  }
-
-  100% {
-    background-position: 0% 7%;
-  }
+.subtitleTextSpan:nth-child(2) {
+  animation-delay: 3s;
 }
 
-@keyframes gradient-animation {
+.subtitleTextSpan:nth-child(3) {
+  animation-delay: 6s;
+}
+
+.subtitleTextSpan:nth-child(4) {
+  animation-delay: 9s;
+}
+
+@keyframes slide {
   0% {
-    background-position: 0% 7%;
+    transform: translateY(100%);
+    opacity: 0.1;
   }
-
-  50% {
-    background-position: 100% 94%;
+  15% {
+    transform: translateY(0);
+    opacity: 1;
   }
-
+  30% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  45% {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
   100% {
-    background-position: 0% 7%;
+    transform: translateY(-100%);
+    opacity: 0.1;
   }
 }
